{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "bcc32ff3-4846-4773-bf8d-01943588ab6c",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "0ee41fe1-ae7e-4e1b-9bde-07ec7c56bc18",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimatyPosition",
                    "type": "PassThrough",
                    "id": "3673f897-7896-4c4c-8488-fc7450c26efe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e3542f60-6207-427e-95e3-5f03020b6528",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7847c8de-cdc9-4f4a-b14e-f596e1894510",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimatyPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}